Ticket #15044 (closed defect: fixed)

Opened 3 months ago

Last modified 3 months ago

EVT_SET_CURSOR not firing on Mac OS (Cocoa)

Reported by: artlogic Owned by: csomor
Priority: normal Milestone:
Component: wxOSX-Cocoa Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: no
Blocking:

Description

I've been using the AGW AUI, and noticed when resizing frames, the mouse cursor didn't change to a resize cursor. After digging around in the code a bit, I discovered that EVT_SET_CURSOR wasn't firing. After running a few more tests, I found that EVT_SET_CURSOR doesn't seem to fire at all on Mac OS (but fires just fine on windows).

I have a feeling this may be a wxWidgets problem, and not just related to wxPython - but I don't have the capability to test it at the current time.

Change History

Changed 3 months ago by csomor

  • owner set to csomor
  • status changed from new to accepted

osx cocoa problem

Changed 3 months ago by paulclinger

  • priority changed from normal to high

I can confirm the same thing; in my case I'm not using wxPython, but still don't get any EVT_SET_CURSOR events triggered on OSX cocoa. The only place where this event is generated is "wxWindowMac::MacSetupCursor" (in window_osx.cpp). It is behind !gGlobalCursor.IsOk() check and there is no check like this in 2.8.12 code that works as expected (at least based on my review of mac/classic/window.cpp).

Changed 3 months ago by csomor

  • priority changed from high to normal

yes, osx_cocoa is missing the call, but don't put a high priority on such cases

Changed 3 months ago by SC

  • status changed from accepted to closed
  • resolution set to fixed

(In [73595]) enabling cursor events, fixes #15044

Changed 3 months ago by paulclinger

Confirmed fixed. Thank your for the prompt update.

Changed 3 months ago by paulclinger

  • component changed from wxPython to wxOSX-Cocoa
Note: See TracTickets for help on using tickets.